<resources>
    <string name="app_name">经纬度定位</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="action_settings">setting</string>
    <string name="add_file">文件管理</string>
    <string name="datamanager">数据管理</string>
    <string name="cancle">取消</string>
    <string name="show">显示</string>
    <string name="all">全部</string>
    <string name="decimal">小 数</string>
    <string name="dms">度分秒</string>
    <string name="searchLabel">搜索</string>
    <string name="searchHint">名称</string>
    <string name="name">mingc</string>
    <string name="contains">输入包含文字</string>
    <string name="help">帮助</string>
    <string name="down">下载</string>
    <string name="hotcity">热门城市</string>
    <string name="downmanager">下载管理</string>
    <string name="citylist">城市列表</string>
    <string name="dufenmiao">度分秒转换</string>
    <string name="du">度数</string>
    <string name="computer">计算</string>
    <string name="result">结果:</string>
    <string name="wgs">WGS84</string>
    <string name="baidu">baidu</string>
    <string name="save">保存</string>
    <string name="pointname">名称</string>
    <string name="btnphoto">添加照片</string>
    <string name="btnpicture">图库</string>
    <string name="newfile">新建</string>
    <string name="importfile">导 入</string>
    <string name="hello_world">Hello world!</string>
    <string name="north">北</string>
    <string name="south">南</string>
    <string name="east">东</string>
    <string name="west">西</string>
    <string name="title_activity_distance">DistanceActivity</string>
    <string name="bdp_update_request_net_error">网络错误，请重试</string>
    <string name="bdp_update_tip_waiting">等待下载</string>
    <string name="bdp_update_title_download">发现新版本</string>
    <string name="bdp_update_title_install">发现新版本安装包</string>
    <string name="bdp_update_title_as">提示</string>
    <string name="bdp_update_download_main_tip">%1$s → %2$s / %3$s</string>
    <string name="bdp_update_install_main_tip">%1$s → %2$s</string>
    <string name="bdp_update_minor_tip">更新内容：</string>
    <string name="bdp_update_action_download">立即升级</string>
    <string name="bdp_update_action_install">立即安装</string>
    <string name="bdp_update_not_now">暂不升级</string>
    <string name="bdp_update_ignore">忽略此版本</string>
    <string name="bdp_update_new_download">发现新版本，点击更新</string>
    <string name="bdp_update_download_complete">新版本下载完成，点击安装</string>
    <string name="bdp_update_as_notify_title">百度手机助手</string>
    <string name="bdp_update_as_notify_tip">百度手机助手</string>
    <string name="bdp_update_as_download_complete">百度手机助手下载完成</string>
    <string name="bdp_update_as_install_tip">推荐您使用百度手机助手进行升级。您尚未安装百度手机助手，请先安装。</string>
    <string name="bdp_update_as_action_install">安装</string>
    <string name="bdp_update_as_action_cancel">取消</string>
    <string name="bdp_update_install_file_not_exist">安装包已被删除</string>
    <string name="title_activity_alipay">AlipayActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>
    <string name="already_registered">已有账号? 登陆</string>
    <string name="prompt_name">用户名</string>
    <string name="action_register">注册</string>
    <string name="action_recover">找回</string>
    <string name="remembered_password">刚刚记起?</string>
    <string name="app_decription">经纬度定位</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="different_login">或</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">邮箱或密码错误</string>
    <string name="error_field_required">不能为空</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="create_account">注册</string>
    <string name="error_password_diff">两次密码不一致</string>
    <string name="logOrRegister">登陆/注册</string>
    <string name="tileoverlay_online_urlhint">放入图片URL，点击在线</string>
    <string name="tileoverlay_online">在线方式</string>
    <string name="tileoverlay_offline">离线方式</string>
    <string name="hide_poiinfo">只显示道路信息</string>
    <string name="delete">删除</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="put">上传</string>
    <string name="synchroniz">同步</string>
    <string name="copy">备份</string>
    <string name="xy">平面</string>
    <string name="share">分享</string>
    <string name="importdata">导入</string>
    <string name="pre_gps_rate">gps_rate</string>
    <string name="pre_coordinatedisplayformat">coordinatedisplayformat</string>
    <string name="pre_iphone">iphone</string>
    <string name="import_help">\导入格式支持txt,csv,kml以及该软件导出的文件夹.\ntxt及csv文件以逗号分隔\n第一列点名\n第二列纬度\n第三列经度\n第四列说明（可选）
        \n例:\n点1,30.4245411,120.546525,描述1\n点2,30.425562,120.887453,描述2\"
        \nkml只支持点和线元素\n如要导入照片\n可以参考导出的文件的格式自行设置.
        \n联系qq897481601</string>
    <string-array name="update_rate">
        <item>120.345687</item>
        <item>120°32′15.26″</item>
    </string-array>
    <string-array name="update_rate_value">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="gps_rate">
        <item>1秒</item>
        <item>2秒</item>
        <item>5秒</item>
        <item>10秒</item>
        <item>30秒</item>
    </string-array>
    <string-array name="gps_rate_value">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
    </string-array>
    <string name="action_bar_back">返回</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="agree">同意</string>
    <string name="agreed">已同意</string>
    <string name="refuse">拒绝</string>
    <string name="refused">已拒绝</string>
    <string name="done">完成</string>
    <string name="friend_allow_all">允许任何人添加</string>
    <string name="friend_refuse_all">拒绝任何人添加</string>
    <string name="friend_need_confirm">需验证</string>
    <string name="default_group_name">默认分组</string>
    <string name="change_group_error">修改分组失败</string>
    <string name="people">人</string>
    <string name="login_error">登录失败，请稍后重试</string>
    <string name="login_error_timeout">登录失败，当前无网络</string>
    <string name="login_succ">登录成功</string>
    <string name="kick_logout">你的账号已在其他终端登录,重新登录</string>
    <string name="operate_fail">操作失败</string>
    <string name="need_permission">您需要开启权限,并重启应用</string>
    <string name="save_succ">保存成功</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="save_fail">保存失败</string>
    <string name="save_exist">文件已存在</string>
    <string name="tls_expire">账号登录已过期，请重新登录</string>
    <string name="env_normal">当前连接正式环境</string>
    <string name="env_test">当前连接测试环境</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="google_service_not_available">google推送服务不可用，请检查google play设置</string>
    <string name="send_success">发送成功</string>
    <string name="home_conversation_tab">会话</string>
    <string name="home_setting_tab">设置</string>
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_del">删除会话</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="home_contact_tab">联系人</string>
    <string name="new_friend">新朋友</string>
    <string name="public_group">公开群</string>
    <string name="discuss_group">讨论组</string>
    <string name="chatroom">聊天室</string>
    <string name="addfriend">添加好友</string>
    <string name="contact_add_group">添加群组</string>
    <string name="manangergroup">管理分组</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_logout_fail">退出登录失败，请稍后重试</string>
    <string name="setting_friend_confirm">好友申请</string>
    <string name="setting_black_list">黑名单</string>
    <string name="setting_message_notify">消息提醒</string>
    <string name="setting_about">关于</string>
    <string name="setting_friend_need_confirm">需验证</string>
    <string name="setting_nick_name_change">修改昵称</string>
    <string name="setting_friend_confirm_change_err">修改验证类型失败</string>
    <string name="search_default">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_hint">搜索ID或手机号</string>
    <string name="search_no_result">很抱歉，没有找到符合内容</string>
    <string name="title_addfri">添加好友</string>
    <string name="add_detail_ID">帐号ID</string>
    <string name="add_detail_name">备注名</string>
    <string name="add_detail_group">分组</string>
    <string name="add_detail_message">附加消息</string>
    <string name="add_friend_send">发送添加好友请求</string>
    <string name="add_friend_succeed">请求已发送</string>
    <string name="add_friend_added">已添加好友</string>
    <string name="add_friend_refuse_all">对方拒绝添加任何人为好友</string>
    <string name="add_friend_to_blacklist">我在对方的黑名单中</string>
    <string name="add_friend_error">添加好友失败，请稍后重试</string>
    <string name="add_friend_del_black_list">添加失败，该用户在你的黑名单中，是否将该用户从黑名单中移除（你需要在移除成功后重发添加好友请求）</string>
    <string name="add_friend_del_black_err">移出黑名单失败</string>
    <string name="add_friend_del_black_succ">移出黑名单成功</string>
    <string name="title_manager_group">分组管理</string>
    <string name="add_new_group">添加分组</string>
    <string name="add_dialog_title">添加分组</string>
    <string name="add_dialog_subtitle">请输入新分组的名称</string>
    <string name="add_dialog_null">分组名称不能为空</string>
    <string name="title_confirm_delete_group">确认删除改分组吗？</string>
    <string name="delete_dialog_subtitle">删除分组</string>
    <string name="delete_dialog_subtitle_sur">,该分组好友将移动到默认分组</string>
    <string name="delete_group_succ">删除分组成功</string>
    <string name="add_group_succ">添加分组成功</string>
    <string name="add_group_error_existed">添加失败，分组已存在</string>
    <string name="add_group_error_limit">添加失败，分组达到上限</string>
    <string name="add_group_error">添加分组失败</string>
    <string name="del_group_error">删除分组失败</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_audio_too_long">录音过长，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_pullback">撤回</string>
    <string name="chat_pullback_not_support">改会话不支持消息撤回</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="chat_typing">对方正在输入…</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="profile_detail">详细资料</string>
    <string name="profile_back">返回</string>
    <string name="profile_id">账号</string>
    <string name="profile_remark">备注名</string>
    <string name="profile_black">加入黑名单</string>
    <string name="profile_remark_edit">修改备注</string>
    <string name="profile_chat">发送消息</string>
    <string name="profile_del">删除好友</string>
    <string name="profile_group">添加分组</string>
    <string name="pre_isshow_name">pre_isshow_name</string>
</resources>