<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<include layout="@layout/toolbar"/>
    <com.fanweilin.coordinatemap.widget.CheckableRelativeLayout
        android:id="@+id/select_all"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/subbar"
        android:onClick="checkall"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/maginparent"
            android:text="@string/all"
            android:textColor="@color/textcolor"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/iv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/maginparent"
            android:clickable="false"
            android:focusable="false" />
    </com.fanweilin.coordinatemap.widget.CheckableRelativeLayout>

    <ListView
        android:id="@+id/data_manager_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice"
        android:divider="@color/listdiver"
        android:dividerHeight="1dp"></ListView>

    <LinearLayout
        android:id="@+id/layoutshow"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/subbar"
        android:orientation="horizontal"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btnsave"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_show"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/btnsave"
            android:gravity="center"
            android:text="@string/show"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
